PySpice/Spice/Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    STRING

Grammar

Rule 0     S' -> command
Rule 1     command -> ID expression_list_space
Rule 2     command -> ID
Rule 3     command -> DOT_COMMAND expression_list_space
Rule 4     command -> DOT_COMMAND
Rule 5     expression -> ID BRANCH
Rule 6     expression -> TILDE ID
Rule 7     expression -> TILDE NUMBER
Rule 8     expression -> AT ID LEFT_BRACKET ID RIGHT_BRACKET
Rule 9     expression -> NUMBER
Rule 10    expression -> ID
Rule 11    expression -> MINUS expression
Rule 12    expression -> NOT expression
Rule 13    expression -> expression POWER expression
Rule 14    expression -> expression MULTIPLY expression
Rule 15    expression -> expression DIVIDE expression
Rule 16    expression -> expression MODULO expression
Rule 17    expression -> expression INT_DIVIDE expression
Rule 18    expression -> expression ADD expression
Rule 19    expression -> expression MINUS expression
Rule 20    expression -> expression EQUAL expression
Rule 21    expression -> expression NOT_EQUAL expression
Rule 22    expression -> expression LESS_EQUAL expression
Rule 23    expression -> expression GREATER_EQUAL expression
Rule 24    expression -> expression LESS expression
Rule 25    expression -> expression GREATER expression
Rule 26    expression -> expression AND expression
Rule 27    expression -> expression OR expression
Rule 28    expression -> LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
Rule 29    expression -> expression QUESTION expression COLON expression
Rule 30    brace_expression -> LEFT_BRACE expression RIGHT_BRACE
Rule 31    expression -> brace_expression
Rule 32    expression -> QUOTE expression QUOTE
Rule 33    expression_list_space -> item
Rule 34    expression_list_space -> expression_list_space item
Rule 35    item -> expression
Rule 36    item -> tuple
Rule 37    expression_list_comma -> expression
Rule 38    expression_list_comma -> expression_list_comma COMMA expression
Rule 39    expression -> LEFT_BRACKET expression_list_space RIGHT_BRACKET
Rule 40    tuple -> LEFT_PARENTHESIS expression COMMA expression RIGHT_PARENTHESIS
Rule 41    tuple_list -> tuple
Rule 42    tuple_list -> tuple_list tuple
Rule 43    function -> ID LEFT_PARENTHESIS expression_list_comma RIGHT_PARENTHESIS
Rule 44    function -> ID LEFT_PARENTHESIS expression_list_space RIGHT_PARENTHESIS
Rule 45    expression -> function
Rule 46    port_type_modifier -> MODULO ID
Rule 47    expression -> port_type_modifier LEFT_PARENTHESIS expression_list_space RIGHT_PARENTHESIS
Rule 48    expression -> port_type_modifier LEFT_BRACKET expression_list_space RIGHT_BRACKET
Rule 49    expression -> ID SET expression
Rule 50    expression -> ID SET expression COMMA expression
Rule 51    expression -> function SET expression
Rule 52    expression -> brace_expression SET tuple_list

Terminals, with rules where they appear

ADD                  : 18
AND                  : 26
AT                   : 8
BRANCH               : 5
COLON                : 29
COMMA                : 38 40 50
DIVIDE               : 15
DOT_COMMAND          : 3 4
EQUAL                : 20
GREATER              : 25
GREATER_EQUAL        : 23
ID                   : 1 2 5 6 8 8 10 43 44 46 49 50
INT_DIVIDE           : 17
LEFT_BRACE           : 30
LEFT_BRACKET         : 8 39 48
LEFT_PARENTHESIS     : 28 40 43 44 47
LESS                 : 24
LESS_EQUAL           : 22
MINUS                : 11 19
MODULO               : 16 46
MULTIPLY             : 14
NOT                  : 12
NOT_EQUAL            : 21
NUMBER               : 7 9
OR                   : 27
POWER                : 13
QUESTION             : 29
QUOTE                : 32 32
RIGHT_BRACE          : 30
RIGHT_BRACKET        : 8 39 48
RIGHT_PARENTHESIS    : 28 40 43 44 47
SET                  : 49 50 51 52
STRING               : 
TILDE                : 6 7
error                : 

Nonterminals, with rules where they appear

brace_expression     : 31 52
command              : 0
expression           : 11 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 29 29 29 30 32 35 37 38 40 40 49 50 50 51
expression_list_comma : 38 43
expression_list_space : 1 3 34 39 44 47 48
function             : 45 51
item                 : 33 34
port_type_modifier   : 47 48
tuple                : 36 41 42
tuple_list           : 42 52

Parsing method: LALR

state 0

    (0) S' -> . command
    (1) command -> . ID expression_list_space
    (2) command -> . ID
    (3) command -> . DOT_COMMAND expression_list_space
    (4) command -> . DOT_COMMAND

    ID              shift and go to state 2
    DOT_COMMAND     shift and go to state 3

    command                        shift and go to state 1

state 1

    (0) S' -> command .



state 2

    (1) command -> ID . expression_list_space
    (2) command -> ID .
    (33) expression_list_space -> . item
    (34) expression_list_space -> . expression_list_space item
    (35) item -> . expression
    (36) item -> . tuple
    (5) expression -> . ID BRANCH
    (6) expression -> . TILDE ID
    (7) expression -> . TILDE NUMBER
    (8) expression -> . AT ID LEFT_BRACKET ID RIGHT_BRACKET
    (9) expression -> . NUMBER
    (10) expression -> . ID
    (11) expression -> . MINUS expression
    (12) expression -> . NOT expression
    (13) expression -> . expression POWER expression
    (14) expression -> . expression MULTIPLY expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MODULO expression
    (17) expression -> . expression INT_DIVIDE expression
    (18) expression -> . expression ADD expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression EQUAL expression
    (21) expression -> . expression NOT_EQUAL expression
    (22) expression -> . expression LESS_EQUAL expression
    (23) expression -> . expression GREATER_EQUAL expression
    (24) expression -> . expression LESS expression
    (25) expression -> . expression GREATER expression
    (26) expression -> . expression AND expression
    (27) expression -> . expression OR expression
    (28) expression -> . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
    (29) expression -> . expression QUESTION expression COLON expression
    (31) expression -> . brace_expression
    (32) expression -> . QUOTE expression QUOTE
    (39) expression -> . LEFT_BRACKET expression_list_space RIGHT_BRACKET
    (45) expression -> . function
    (47) expression -> . port_type_modifier LEFT_PARENTHESIS expression_list_space RIGHT_PARENTHESIS
    (48) expression -> . port_type_modifier LEFT_BRACKET expression_list_space RIGHT_BRACKET
    (49) expression -> . ID SET expression
    (50) expression -> . ID SET expression COMMA expression
    (51) expression -> . function SET expression
    (52) expression -> . brace_expression SET tuple_list
    (40) tuple -> . LEFT_PARENTHESIS expression COMMA expression RIGHT_PARENTHESIS
    (30) brace_expression -> . LEFT_BRACE expression RIGHT_BRACE
    (43) function -> . ID LEFT_PARENTHESIS expression_list_comma RIGHT_PARENTHESIS
    (44) function -> . ID LEFT_PARENTHESIS expression_list_space RIGHT_PARENTHESIS
    (46) port_type_modifier -> . MODULO ID

    $end            reduce using rule 2 (command -> ID .)
    ID              shift and go to state 4
    TILDE           shift and go to state 9
    AT              shift and go to state 11
    NUMBER          shift and go to state 10
    MINUS           shift and go to state 13
    NOT             shift and go to state 14
    LEFT_PARENTHESIS shift and go to state 16
    QUOTE           shift and go to state 18
    LEFT_BRACKET    shift and go to state 12
    LEFT_BRACE      shift and go to state 21
    MODULO          shift and go to state 15

    expression_list_space          shift and go to state 5
    item                           shift and go to state 6
    expression                     shift and go to state 7
    tuple                          shift and go to state 8
    brace_expression               shift and go to state 17
    function                       shift and go to state 19
    port_type_modifier             shift and go to state 20

state 3

    (3) command -> DOT_COMMAND . expression_list_space
    (4) command -> DOT_COMMAND .
    (33) expression_list_space -> . item
    (34) expression_list_space -> . expression_list_space item
    (35) item -> . expression
    (36) item -> . tuple
    (5) expression -> . ID BRANCH
    (6) expression -> . TILDE ID
    (7) expression -> . TILDE NUMBER
    (8) expression -> . AT ID LEFT_BRACKET ID RIGHT_BRACKET
    (9) expression -> . NUMBER
    (10) expression -> . ID
    (11) expression -> . MINUS expression
    (12) expression -> . NOT expression
    (13) expression -> . expression POWER expression
    (14) expression -> . expression MULTIPLY expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MODULO expression
    (17) expression -> . expression INT_DIVIDE expression
    (18) expression -> . expression ADD expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression EQUAL expression
    (21) expression -> . expression NOT_EQUAL expression
    (22) expression -> . expression LESS_EQUAL expression
    (23) expression -> . expression GREATER_EQUAL expression
    (24) expression -> . expression LESS expression
    (25) expression -> . expression GREATER expression
    (26) expression -> . expression AND expression
    (27) expression -> . expression OR expression
    (28) expression -> . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
    (29) expression -> . expression QUESTION expression COLON expression
    (31) expression -> . brace_expression
    (32) expression -> . QUOTE expression QUOTE
    (39) expression -> . LEFT_BRACKET expression_list_space RIGHT_BRACKET
    (45) expression -> . function
    (47) expression -> . port_type_modifier LEFT_PARENTHESIS expression_list_space RIGHT_PARENTHESIS
    (48) expression -> . port_type_modifier LEFT_BRACKET expression_list_space RIGHT_BRACKET
    (49) expression -> . ID SET expression
    (50) expression -> . ID SET expression COMMA expression
    (51) expression -> . function SET expression
    (52) expression -> . brace_expression SET tuple_list
    (40) tuple -> . LEFT_PARENTHESIS expression COMMA expression RIGHT_PARENTHESIS
    (30) brace_expression -> . LEFT_BRACE expression RIGHT_BRACE
    (43) function -> . ID LEFT_PARENTHESIS expression_list_comma RIGHT_PARENTHESIS
    (44) function -> . ID LEFT_PARENTHESIS expression_list_space RIGHT_PARENTHESIS
    (46) port_type_modifier -> . MODULO ID

    $end            reduce using rule 4 (command -> DOT_COMMAND .)
    ID              shift and go to state 4
    TILDE           shift and go to state 9
    AT              shift and go to state 11
    NUMBER          shift and go to state 10
    MINUS           shift and go to state 13
    NOT             shift and go to state 14
    LEFT_PARENTHESIS shift and go to state 16
    QUOTE           shift and go to state 18
    LEFT_BRACKET    shift and go to state 12
    LEFT_BRACE      shift and go to state 21
    MODULO          shift and go to state 15

    expression_list_space          shift and go to state 22
    item                           shift and go to state 6
    expression                     shift and go to state 7
    tuple                          shift and go to state 8
    brace_expression               shift and go to state 17
    function                       shift and go to state 19
    port_type_modifier             shift and go to state 20

state 4

    (5) expression -> ID . BRANCH
    (10) expression -> ID .
    (49) expression -> ID . SET expression
    (50) expression -> ID . SET expression COMMA expression
    (43) function -> ID . LEFT_PARENTHESIS expression_list_comma RIGHT_PARENTHESIS
    (44) function -> ID . LEFT_PARENTHESIS expression_list_space RIGHT_PARENTHESIS

  ! shift/reduce conflict for LEFT_PARENTHESIS resolved as shift
    BRANCH          shift and go to state 23
    POWER           reduce using rule 10 (expression -> ID .)
    MULTIPLY        reduce using rule 10 (expression -> ID .)
    DIVIDE          reduce using rule 10 (expression -> ID .)
    MODULO          reduce using rule 10 (expression -> ID .)
    INT_DIVIDE      reduce using rule 10 (expression -> ID .)
    ADD             reduce using rule 10 (expression -> ID .)
    MINUS           reduce using rule 10 (expression -> ID .)
    EQUAL           reduce using rule 10 (expression -> ID .)
    NOT_EQUAL       reduce using rule 10 (expression -> ID .)
    LESS_EQUAL      reduce using rule 10 (expression -> ID .)
    GREATER_EQUAL   reduce using rule 10 (expression -> ID .)
    LESS            reduce using rule 10 (expression -> ID .)
    GREATER         reduce using rule 10 (expression -> ID .)
    AND             reduce using rule 10 (expression -> ID .)
    OR              reduce using rule 10 (expression -> ID .)
    QUESTION        reduce using rule 10 (expression -> ID .)
    ID              reduce using rule 10 (expression -> ID .)
    TILDE           reduce using rule 10 (expression -> ID .)
    AT              reduce using rule 10 (expression -> ID .)
    NUMBER          reduce using rule 10 (expression -> ID .)
    NOT             reduce using rule 10 (expression -> ID .)
    QUOTE           reduce using rule 10 (expression -> ID .)
    LEFT_BRACKET    reduce using rule 10 (expression -> ID .)
    LEFT_BRACE      reduce using rule 10 (expression -> ID .)
    $end            reduce using rule 10 (expression -> ID .)
    RIGHT_BRACKET   reduce using rule 10 (expression -> ID .)
    RIGHT_PARENTHESIS reduce using rule 10 (expression -> ID .)
    COMMA           reduce using rule 10 (expression -> ID .)
    RIGHT_BRACE     reduce using rule 10 (expression -> ID .)
    COLON           reduce using rule 10 (expression -> ID .)
    SET             shift and go to state 24
    LEFT_PARENTHESIS shift and go to state 25

  ! LEFT_PARENTHESIS [ reduce using rule 10 (expression -> ID .) ]


state 5

    (1) command -> ID expression_list_space .
    (34) expression_list_space -> expression_list_space . item
    (35) item -> . expression
    (36) item -> . tuple
    (5) expression -> . ID BRANCH
    (6) expression -> . TILDE ID
    (7) expression -> . TILDE NUMBER
    (8) expression -> . AT ID LEFT_BRACKET ID RIGHT_BRACKET
    (9) expression -> . NUMBER
    (10) expression -> . ID
    (11) expression -> . MINUS expression
    (12) expression -> . NOT expression
    (13) expression -> . expression POWER expression
    (14) expression -> . expression MULTIPLY expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MODULO expression
    (17) expression -> . expression INT_DIVIDE expression
    (18) expression -> . expression ADD expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression EQUAL expression
    (21) expression -> . expression NOT_EQUAL expression
    (22) expression -> . expression LESS_EQUAL expression
    (23) expression -> . expression GREATER_EQUAL expression
    (24) expression -> . expression LESS expression
    (25) expression -> . expression GREATER expression
    (26) expression -> . expression AND expression
    (27) expression -> . expression OR expression
    (28) expression -> . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
    (29) expression -> . expression QUESTION expression COLON expression
    (31) expression -> . brace_expression
    (32) expression -> . QUOTE expression QUOTE
    (39) expression -> . LEFT_BRACKET expression_list_space RIGHT_BRACKET
    (45) expression -> . function
    (47) expression -> . port_type_modifier LEFT_PARENTHESIS expression_list_space RIGHT_PARENTHESIS
    (48) expression -> . port_type_modifier LEFT_BRACKET expression_list_space RIGHT_BRACKET
    (49) expression -> . ID SET expression
    (50) expression -> . ID SET expression COMMA expression
    (51) expression -> . function SET expression
    (52) expression -> . brace_expression SET tuple_list
    (40) tuple -> . LEFT_PARENTHESIS expression COMMA expression RIGHT_PARENTHESIS
    (30) brace_expression -> . LEFT_BRACE expression RIGHT_BRACE
    (43) function -> . ID LEFT_PARENTHESIS expression_list_comma RIGHT_PARENTHESIS
    (44) function -> . ID LEFT_PARENTHESIS expression_list_space RIGHT_PARENTHESIS
    (46) port_type_modifier -> . MODULO ID

    $end            reduce using rule 1 (command -> ID expression_list_space .)
    ID              shift and go to state 4
    TILDE           shift and go to state 9
    AT              shift and go to state 11
    NUMBER          shift and go to state 10
    MINUS           shift and go to state 13
    NOT             shift and go to state 14
    LEFT_PARENTHESIS shift and go to state 16
    QUOTE           shift and go to state 18
    LEFT_BRACKET    shift and go to state 12
    LEFT_BRACE      shift and go to state 21
    MODULO          shift and go to state 15

    item                           shift and go to state 26
    expression                     shift and go to state 7
    tuple                          shift and go to state 8
    brace_expression               shift and go to state 17
    function                       shift and go to state 19
    port_type_modifier             shift and go to state 20

state 6

    (33) expression_list_space -> item .

    ID              reduce using rule 33 (expression_list_space -> item .)
    TILDE           reduce using rule 33 (expression_list_space -> item .)
    AT              reduce using rule 33 (expression_list_space -> item .)
    NUMBER          reduce using rule 33 (expression_list_space -> item .)
    MINUS           reduce using rule 33 (expression_list_space -> item .)
    NOT             reduce using rule 33 (expression_list_space -> item .)
    LEFT_PARENTHESIS reduce using rule 33 (expression_list_space -> item .)
    QUOTE           reduce using rule 33 (expression_list_space -> item .)
    LEFT_BRACKET    reduce using rule 33 (expression_list_space -> item .)
    LEFT_BRACE      reduce using rule 33 (expression_list_space -> item .)
    MODULO          reduce using rule 33 (expression_list_space -> item .)
    $end            reduce using rule 33 (expression_list_space -> item .)
    RIGHT_BRACKET   reduce using rule 33 (expression_list_space -> item .)
    RIGHT_PARENTHESIS reduce using rule 33 (expression_list_space -> item .)


state 7

    (35) item -> expression .
    (13) expression -> expression . POWER expression
    (14) expression -> expression . MULTIPLY expression
    (15) expression -> expression . DIVIDE expression
    (16) expression -> expression . MODULO expression
    (17) expression -> expression . INT_DIVIDE expression
    (18) expression -> expression . ADD expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . EQUAL expression
    (21) expression -> expression . NOT_EQUAL expression
    (22) expression -> expression . LESS_EQUAL expression
    (23) expression -> expression . GREATER_EQUAL expression
    (24) expression -> expression . LESS expression
    (25) expression -> expression . GREATER expression
    (26) expression -> expression . AND expression
    (27) expression -> expression . OR expression
    (29) expression -> expression . QUESTION expression COLON expression

  ! shift/reduce conflict for MODULO resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    ID              reduce using rule 35 (item -> expression .)
    TILDE           reduce using rule 35 (item -> expression .)
    AT              reduce using rule 35 (item -> expression .)
    NUMBER          reduce using rule 35 (item -> expression .)
    NOT             reduce using rule 35 (item -> expression .)
    LEFT_PARENTHESIS reduce using rule 35 (item -> expression .)
    QUOTE           reduce using rule 35 (item -> expression .)
    LEFT_BRACKET    reduce using rule 35 (item -> expression .)
    LEFT_BRACE      reduce using rule 35 (item -> expression .)
    $end            reduce using rule 35 (item -> expression .)
    RIGHT_BRACKET   reduce using rule 35 (item -> expression .)
    RIGHT_PARENTHESIS reduce using rule 35 (item -> expression .)
    POWER           shift and go to state 27
    MULTIPLY        shift and go to state 28
    DIVIDE          shift and go to state 29
    MODULO          shift and go to state 30
    INT_DIVIDE      shift and go to state 31
    ADD             shift and go to state 32
    MINUS           shift and go to state 33
    EQUAL           shift and go to state 34
    NOT_EQUAL       shift and go to state 35
    LESS_EQUAL      shift and go to state 36
    GREATER_EQUAL   shift and go to state 37
    LESS            shift and go to state 38
    GREATER         shift and go to state 39
    AND             shift and go to state 40
    OR              shift and go to state 41
    QUESTION        shift and go to state 42

  ! MINUS           [ reduce using rule 35 (item -> expression .) ]
  ! MODULO          [ reduce using rule 35 (item -> expression .) ]


state 8

    (36) item -> tuple .

    ID              reduce using rule 36 (item -> tuple .)
    TILDE           reduce using rule 36 (item -> tuple .)
    AT              reduce using rule 36 (item -> tuple .)
    NUMBER          reduce using rule 36 (item -> tuple .)
    MINUS           reduce using rule 36 (item -> tuple .)
    NOT             reduce using rule 36 (item -> tuple .)
    LEFT_PARENTHESIS reduce using rule 36 (item -> tuple .)
    QUOTE           reduce using rule 36 (item -> tuple .)
    LEFT_BRACKET    reduce using rule 36 (item -> tuple .)
    LEFT_BRACE      reduce using rule 36 (item -> tuple .)
    MODULO          reduce using rule 36 (item -> tuple .)
    $end            reduce using rule 36 (item -> tuple .)
    RIGHT_BRACKET   reduce using rule 36 (item -> tuple .)
    RIGHT_PARENTHESIS reduce using rule 36 (item -> tuple .)


state 9

    (6) expression -> TILDE . ID
    (7) expression -> TILDE . NUMBER

    ID              shift and go to state 43
    NUMBER          shift and go to state 44


state 10

    (9) expression -> NUMBER .

    POWER           reduce using rule 9 (expression -> NUMBER .)
    MULTIPLY        reduce using rule 9 (expression -> NUMBER .)
    DIVIDE          reduce using rule 9 (expression -> NUMBER .)
    MODULO          reduce using rule 9 (expression -> NUMBER .)
    INT_DIVIDE      reduce using rule 9 (expression -> NUMBER .)
    ADD             reduce using rule 9 (expression -> NUMBER .)
    MINUS           reduce using rule 9 (expression -> NUMBER .)
    EQUAL           reduce using rule 9 (expression -> NUMBER .)
    NOT_EQUAL       reduce using rule 9 (expression -> NUMBER .)
    LESS_EQUAL      reduce using rule 9 (expression -> NUMBER .)
    GREATER_EQUAL   reduce using rule 9 (expression -> NUMBER .)
    LESS            reduce using rule 9 (expression -> NUMBER .)
    GREATER         reduce using rule 9 (expression -> NUMBER .)
    AND             reduce using rule 9 (expression -> NUMBER .)
    OR              reduce using rule 9 (expression -> NUMBER .)
    QUESTION        reduce using rule 9 (expression -> NUMBER .)
    ID              reduce using rule 9 (expression -> NUMBER .)
    TILDE           reduce using rule 9 (expression -> NUMBER .)
    AT              reduce using rule 9 (expression -> NUMBER .)
    NUMBER          reduce using rule 9 (expression -> NUMBER .)
    NOT             reduce using rule 9 (expression -> NUMBER .)
    LEFT_PARENTHESIS reduce using rule 9 (expression -> NUMBER .)
    QUOTE           reduce using rule 9 (expression -> NUMBER .)
    LEFT_BRACKET    reduce using rule 9 (expression -> NUMBER .)
    LEFT_BRACE      reduce using rule 9 (expression -> NUMBER .)
    $end            reduce using rule 9 (expression -> NUMBER .)
    RIGHT_BRACKET   reduce using rule 9 (expression -> NUMBER .)
    RIGHT_PARENTHESIS reduce using rule 9 (expression -> NUMBER .)
    COMMA           reduce using rule 9 (expression -> NUMBER .)
    RIGHT_BRACE     reduce using rule 9 (expression -> NUMBER .)
    COLON           reduce using rule 9 (expression -> NUMBER .)


state 11

    (8) expression -> AT . ID LEFT_BRACKET ID RIGHT_BRACKET

    ID              shift and go to state 45


state 12

    (39) expression -> LEFT_BRACKET . expression_list_space RIGHT_BRACKET
    (33) expression_list_space -> . item
    (34) expression_list_space -> . expression_list_space item
    (35) item -> . expression
    (36) item -> . tuple
    (5) expression -> . ID BRANCH
    (6) expression -> . TILDE ID
    (7) expression -> . TILDE NUMBER
    (8) expression -> . AT ID LEFT_BRACKET ID RIGHT_BRACKET
    (9) expression -> . NUMBER
    (10) expression -> . ID
    (11) expression -> . MINUS expression
    (12) expression -> . NOT expression
    (13) expression -> . expression POWER expression
    (14) expression -> . expression MULTIPLY expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MODULO expression
    (17) expression -> . expression INT_DIVIDE expression
    (18) expression -> . expression ADD expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression EQUAL expression
    (21) expression -> . expression NOT_EQUAL expression
    (22) expression -> . expression LESS_EQUAL expression
    (23) expression -> . expression GREATER_EQUAL expression
    (24) expression -> . expression LESS expression
    (25) expression -> . expression GREATER expression
    (26) expression -> . expression AND expression
    (27) expression -> . expression OR expression
    (28) expression -> . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
    (29) expression -> . expression QUESTION expression COLON expression
    (31) expression -> . brace_expression
    (32) expression -> . QUOTE expression QUOTE
    (39) expression -> . LEFT_BRACKET expression_list_space RIGHT_BRACKET
    (45) expression -> . function
    (47) expression -> . port_type_modifier LEFT_PARENTHESIS expression_list_space RIGHT_PARENTHESIS
    (48) expression -> . port_type_modifier LEFT_BRACKET expression_list_space RIGHT_BRACKET
    (49) expression -> . ID SET expression
    (50) expression -> . ID SET expression COMMA expression
    (51) expression -> . function SET expression
    (52) expression -> . brace_expression SET tuple_list
    (40) tuple -> . LEFT_PARENTHESIS expression COMMA expression RIGHT_PARENTHESIS
    (30) brace_expression -> . LEFT_BRACE expression RIGHT_BRACE
    (43) function -> . ID LEFT_PARENTHESIS expression_list_comma RIGHT_PARENTHESIS
    (44) function -> . ID LEFT_PARENTHESIS expression_list_space RIGHT_PARENTHESIS
    (46) port_type_modifier -> . MODULO ID

    ID              shift and go to state 4
    TILDE           shift and go to state 9
    AT              shift and go to state 11
    NUMBER          shift and go to state 10
    MINUS           shift and go to state 13
    NOT             shift and go to state 14
    LEFT_PARENTHESIS shift and go to state 16
    QUOTE           shift and go to state 18
    LEFT_BRACKET    shift and go to state 12
    LEFT_BRACE      shift and go to state 21
    MODULO          shift and go to state 15

    expression_list_space          shift and go to state 46
    item                           shift and go to state 6
    expression                     shift and go to state 7
    tuple                          shift and go to state 8
    brace_expression               shift and go to state 17
    function                       shift and go to state 19
    port_type_modifier             shift and go to state 20

state 13

    (11) expression -> MINUS . expression
    (5) expression -> . ID BRANCH
    (6) expression -> . TILDE ID
    (7) expression -> . TILDE NUMBER
    (8) expression -> . AT ID LEFT_BRACKET ID RIGHT_BRACKET
    (9) expression -> . NUMBER
    (10) expression -> . ID
    (11) expression -> . MINUS expression
    (12) expression -> . NOT expression
    (13) expression -> . expression POWER expression
    (14) expression -> . expression MULTIPLY expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MODULO expression
    (17) expression -> . expression INT_DIVIDE expression
    (18) expression -> . expression ADD expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression EQUAL expression
    (21) expression -> . expression NOT_EQUAL expression
    (22) expression -> . expression LESS_EQUAL expression
    (23) expression -> . expression GREATER_EQUAL expression
    (24) expression -> . expression LESS expression
    (25) expression -> . expression GREATER expression
    (26) expression -> . expression AND expression
    (27) expression -> . expression OR expression
    (28) expression -> . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
    (29) expression -> . expression QUESTION expression COLON expression
    (31) expression -> . brace_expression
    (32) expression -> . QUOTE expression QUOTE
    (39) expression -> . LEFT_BRACKET expression_list_space RIGHT_BRACKET
    (45) expression -> . function
    (47) expression -> . port_type_modifier LEFT_PARENTHESIS expression_list_space RIGHT_PARENTHESIS
    (48) expression -> . port_type_modifier LEFT_BRACKET expression_list_space RIGHT_BRACKET
    (49) expression -> . ID SET expression
    (50) expression -> . ID SET expression COMMA expression
    (51) expression -> . function SET expression
    (52) expression -> . brace_expression SET tuple_list
    (30) brace_expression -> . LEFT_BRACE expression RIGHT_BRACE
    (43) function -> . ID LEFT_PARENTHESIS expression_list_comma RIGHT_PARENTHESIS
    (44) function -> . ID LEFT_PARENTHESIS expression_list_space RIGHT_PARENTHESIS
    (46) port_type_modifier -> . MODULO ID

    ID              shift and go to state 4
    TILDE           shift and go to state 9
    AT              shift and go to state 11
    NUMBER          shift and go to state 10
    MINUS           shift and go to state 13
    NOT             shift and go to state 14
    LEFT_PARENTHESIS shift and go to state 48
    QUOTE           shift and go to state 18
    LEFT_BRACKET    shift and go to state 12
    LEFT_BRACE      shift and go to state 21
    MODULO          shift and go to state 15

    expression                     shift and go to state 47
    brace_expression               shift and go to state 17
    function                       shift and go to state 19
    port_type_modifier             shift and go to state 20

state 14

    (12) expression -> NOT . expression
    (5) expression -> . ID BRANCH
    (6) expression -> . TILDE ID
    (7) expression -> . TILDE NUMBER
    (8) expression -> . AT ID LEFT_BRACKET ID RIGHT_BRACKET
    (9) expression -> . NUMBER
    (10) expression -> . ID
    (11) expression -> . MINUS expression
    (12) expression -> . NOT expression
    (13) expression -> . expression POWER expression
    (14) expression -> . expression MULTIPLY expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MODULO expression
    (17) expression -> . expression INT_DIVIDE expression
    (18) expression -> . expression ADD expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression EQUAL expression
    (21) expression -> . expression NOT_EQUAL expression
    (22) expression -> . expression LESS_EQUAL expression
    (23) expression -> . expression GREATER_EQUAL expression
    (24) expression -> . expression LESS expression
    (25) expression -> . expression GREATER expression
    (26) expression -> . expression AND expression
    (27) expression -> . expression OR expression
    (28) expression -> . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
    (29) expression -> . expression QUESTION expression COLON expression
    (31) expression -> . brace_expression
    (32) expression -> . QUOTE expression QUOTE
    (39) expression -> . LEFT_BRACKET expression_list_space RIGHT_BRACKET
    (45) expression -> . function
    (47) expression -> . port_type_modifier LEFT_PARENTHESIS expression_list_space RIGHT_PARENTHESIS
    (48) expression -> . port_type_modifier LEFT_BRACKET expression_list_space RIGHT_BRACKET
    (49) expression -> . ID SET expression
    (50) expression -> . ID SET expression COMMA expression
    (51) expression -> . function SET expression
    (52) expression -> . brace_expression SET tuple_list
    (30) brace_expression -> . LEFT_BRACE expression RIGHT_BRACE
    (43) function -> . ID LEFT_PARENTHESIS expression_list_comma RIGHT_PARENTHESIS
    (44) function -> . ID LEFT_PARENTHESIS expression_list_space RIGHT_PARENTHESIS
    (46) port_type_modifier -> . MODULO ID

    ID              shift and go to state 4
    TILDE           shift and go to state 9
    AT              shift and go to state 11
    NUMBER          shift and go to state 10
    MINUS           shift and go to state 13
    NOT             shift and go to state 14
    LEFT_PARENTHESIS shift and go to state 48
    QUOTE           shift and go to state 18
    LEFT_BRACKET    shift and go to state 12
    LEFT_BRACE      shift and go to state 21
    MODULO          shift and go to state 15

    expression                     shift and go to state 49
    brace_expression               shift and go to state 17
    function                       shift and go to state 19
    port_type_modifier             shift and go to state 20

state 15

    (46) port_type_modifier -> MODULO . ID

    ID              shift and go to state 50


state 16

    (28) expression -> LEFT_PARENTHESIS . expression RIGHT_PARENTHESIS
    (40) tuple -> LEFT_PARENTHESIS . expression COMMA expression RIGHT_PARENTHESIS
    (5) expression -> . ID BRANCH
    (6) expression -> . TILDE ID
    (7) expression -> . TILDE NUMBER
    (8) expression -> . AT ID LEFT_BRACKET ID RIGHT_BRACKET
    (9) expression -> . NUMBER
    (10) expression -> . ID
    (11) expression -> . MINUS expression
    (12) expression -> . NOT expression
    (13) expression -> . expression POWER expression
    (14) expression -> . expression MULTIPLY expression
    (15) expression -> . expression DIVIDE expression
    (16) expression -> . expression MODULO expression
    (17) expression -> . expression INT_DIVIDE expression
    (18) expression -> . expression ADD expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression EQUAL expression
    (21) expression -> . expression NOT_EQUAL expression
    (22) expression -> . expression LESS_EQUAL expression
    (23) expression -> . expression GREATER_EQUAL expression
    (24) expression -> . expression LESS expression
    (25) expression -> . expression GREATER expression
    (26) expression -> . expression AND expression
    (27) expression -> . expression OR expression
    (28) expression -> . LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
    (29) expression -> . expression QUESTION expression COLON expression
    (31) expression -> . brace_expression
    (32) expression -> . QUOTE expression QUOTE
    (39) expression -> . LEFT_BRACKET expression_list_space RIGHT_BRACKET
    (45) expression -> . function
    (47) expression -> . port_type_modifier LEFT_PARENTHESIS expression_list_space RIGHT_PARENTHESIS
    (48) expression -> . port_type_modifier LEFT_BRACKET expression_list_space RIGHT_BRACKET
    (49) expression -> . ID SET expression
    (50) expression -> . ID SET expression COMMA expression
    (51) expression -> . function SET expression
    (52) expression -> . brace_expression SET tuple_list
    (30) brace_expression -> . LEFT_BRACE expression RIGHT_BRACE
    (43) function -> . ID LEFT_PARENTHESIS expression_list_comma RIGHT_PARENTHESIS
    (44) function -> . ID LEFT_PARENTHESIS expression_list_space RIGHT_PARENTHESIS
    (46) port_type_modifier -> . MODULO ID
